fixing layout issues

--- a/index.css
+++ b/index.css
@@ -6,6 +6,20 @@
 
 html {
   overflow-x: hidden;
+  height: 100%;
+}
+
+body {
+  width: 100%;
+  min-height: 100vh;
+  background-color: var(--color-bg-low);
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  font-family: sans-serif;
+  color: var(--color-text-dark);
+  container-type: inline-size;
+  container-name: body;
+  overflow-x: hidden;
 }
 
 :root {
@@ -45,10 +59,10 @@ html {
 
 body {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--color-bg-low);
   display: grid;
-  grid-auto-rows: auto 1fr auto;
+  grid-template-rows: auto 1fr auto;
   font-family: sans-serif;
   color: var(--color-text-dark);
   container-type: inline-size;
@@ -75,6 +89,7 @@ footer {
   padding: 0 0 1em;
   font-size: 1.5em;
   color: var(--color-text-light);
+  margin-top: auto;
 }
 
 main {
@@ -82,12 +97,13 @@ main {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  height: fit-content;
+  height: 100%;
   width: 100%;
   gap: 2em;
   padding: 1em;
   max-width: 100%;
   overflow: hidden;
+  min-height: 0;
 }
 
 @container body (max-width: 800px) {
